handbook/infra/base/15-source-ip-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: source-ip-app
  name: source-ip-app
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: source-ip-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: source-ip-app
    spec:
      containers:
        - image: k8s.gcr.io/echoserver:1.4
          name: server
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: source-ip-app
  name: source-ip-app
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: source-ip-app
